stops page jumping on load of Event home pages (#138)

--- a/web/wp-content/themes/lfevents/src/assets/scss/global/_wp-overrides.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/global/_wp-overrides.scss
@@ -55,3 +55,7 @@ p.wp-caption-text{
     @include thumbnail;
   }
 }
+
+body.page main img:first-of-type {
+  min-height: 204px;
+}
