--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-menu.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-menu.scss
@@ -91,6 +91,7 @@
 
   img {
     transition: transform 0.2s ease-in-out 0s;
+    min-height: 64px;
   }
 }
 
